# learn_cpp

./: .gitignore  CMakeLists.txt  Example.cpp  Example.hpp  Makefile  READEME.md  README.md  Variant.cpp  Variant.hpp  slice.h
cherno/: cast.cpp  enum.cpp  static.cpp  template.cpp  this.cpp
learn_autotool/: Makefile.am  README.md
learn_autotool/autom4te.cache/: output.0  requests
learn_autotool/jupiter/: README.md
learn_autotool/jupiter/chapter4/: configure  configure.ac
learn_autotool/jupiter/chapter4/autom4te.cache/: output.0  output.1  output.2  output.3  traces.3
learn_autotool/jupiter/chapter4/src/: Makefile  main.c
learn_autotool/jupiter/chapter5/: Makefile  config.h  config.h.in~  config.status  configure
learn_autotool/jupiter/chapter5/autom4te.cache/: output.2  requests  traces.1  traces.2  traces.3
learn_autotool/jupiter/chapter5/common/: Makefile.in  jupcommon.h
learn_autotool/jupiter/chapter5/src/: Makefile  Makefile.in  jupiter  main.c
learn_autotool/jupiter/chapter6/: config.h.in  config.status
learn_autotool/jupiter/chapter6/autom4te.cache/: output.1  requests  traces.0  traces.1
learn_autotool/jupiter/chapter6/common/: Makefile  jupcommon.h
learn_autotool/jupiter/chapter6/common/.deps/: print.Plo
learn_autotool/jupiter/chapter6/include/: Makefile
learn_autotool/jupiter/chapter6/jupiter-1.0/: Makefile.in  configure.ac
learn_autotool/jupiter/chapter6/jupiter-1.0/_build/sub/: Makefile  config.status
learn_autotool/jupiter/chapter6/jupiter-1.0/_build/sub/common/: Makefile
learn_autotool/jupiter/chapter6/jupiter-1.0/_build/sub/include/: Makefile
learn_autotool/jupiter/chapter6/jupiter-1.0/_build/sub/libjup/: Makefile
learn_autotool/jupiter/chapter6/jupiter-1.0/common/: Makefile.in
learn_autotool/jupiter/chapter6/jupiter-1.0/include/: libjupiter.h
learn_autotool/jupiter/chapter6/jupiter-1.0/libjup/: Makefile.in  jup_print.c
learn_autotool/jupiter/chapter6/libjup/: Makefile.in  jup_print.c  libjupiter_la-jup_print.lo
learn_autotool/jupiter/chapter6/libjup/.libs/: libjupiter.lai
learn_autotool/jupiter/chapter6/src/: Makefile  Makefile.am  Makefile.in  module.h
learn_autotool/jupiter/chapter6/src/.libs/: jupiter
learn_autotool/jupiter/chapter7/: Makefile  Makefile.in  config.h  configure
learn_autotool/jupiter/chapter7/autom4te.cache/: output.0  requests  traces.0  traces.1
learn_autotool/jupiter/chapter7/common/: libjupcommon.la  print.c
learn_autotool/jupiter/chapter7/include/: libjupiter.h
learn_autotool/jupiter/chapter7/libjup/: Makefile  Makefile.am
learn_autotool/jupiter/chapter7/libjup/.libs/: libjupiter.so.0.0.0
learn_autotool/jupiter/chapter7/src/: Makefile  module.h
learn_autotool/jupiter/chapter7/src/modules/hithere/: Makefile  Makefile.am  Makefile.in  hithere.c  hithere.lo
learn_autotool/jupiter/chapter7/src/modules/hithere/.libs/: hithere.lai
learn_autotool/misc/: test.sh
learn_autotool/src/: main.c
learn_autotools/: Makefile.in  configure  configure.ac
learn_autotools/autom4te.cache/: traces.0  traces.1
learn_autotools/jupiter/chapter4/: Makefile  Makefile.in  README.md  autogen.sh  config.h  config.status
learn_autotools/jupiter/chapter4/autom4te.cache/: requests  traces.2
learn_autotools/jupiter/chapter4/src/: Makefile.in
learn_autotools/jupiter/chapter5/: Makefile.in  README.md  configure.ac
learn_autotools/jupiter/chapter5/autom4te.cache/: traces.0
learn_autotools/jupiter/chapter5/common/: Makefile.am  print.c
learn_autotools/jupiter/chapter5/src/: Makefile  Makefile.am  Makefile.in
learn_autotools/jupiter/chapter6/: Makefile  Makefile.am  libtool
learn_autotools/jupiter/chapter6/autom4te.cache/: output.0
learn_autotools/jupiter/chapter6/common/: Makefile.in  print.c
learn_autotools/jupiter/chapter6/jupiter-1.0/: configure
learn_autotools/jupiter/chapter6/libjup/: Makefile
learn_autotools/jupiter/chapter6/src/: jupiter
learn_autotools/jupiter/chapter7/: config.status  configure.ac
learn_autotools/jupiter/chapter7/autom4te.cache/: output.1
learn_autotools/jupiter/chapter7/common/: Makefile
learn_autotools/jupiter/chapter7/include/: Makefile  Makefile.in
learn_autotools/jupiter/chapter7/libjup/: jup_print.c  libjupiter.la
learn_autotools/jupiter/chapter7/src/: Makefile.am  Makefile.in  jupiter  main.c
learn_google_test/: CMakeLists.txt  README.md
learn_google_test/test/: CMakeLists.txt  VariantTests.cpp
learn_makefile/bitcoin/: Makefile
learn_makefile/bitcoin/sources/download-stamps/: .stamp_fetched-boost-boost_1_71_0.tar.bz2.hash
src/cpp_primer/: 1.1.cpp  index.md
test/: CMakeLists.txt  ExampleTests.cpp
unit_test/: README.md  boost_test.cpp
work/download/boost-1_71_0/: boost_1_71_0.tar.bz2.temp
(+12 files in other folders)
